Implement a synchronous ping (#60)
Adding a ping api method
Creating a new instance of the kafka producer is really expensive...we
need to avoid doing that.
