# internal/controller/api/api.spec.json
@@ -88,7 +88,42 @@
           }
         }
       }
+    },
+    "/connection/ping": {
+      "post": {
+        "tags": [
+          "api"
+        ],
+        "summary": "Send a ping request to a receptor node",
+        "security": [
+          {
+            "ApiKeyAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ConnectionStatusRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ConnectionPingResponse"
+                }
+              }
+            }
+          }
+        }
+      }
     }
+
   },
   "components": {
     "securitySchemes": {
@@ -146,6 +181,35 @@
               "connected",
               "disconnected"
             ]
+          }
+        }
+      },
+      "ConnectionPingResponse": {
+        "type": "object",
+        "properties": {
+          "account": {
+            "type": "string"
+          },
+          "sender": {
+            "type": "string"
+          },
+          "message_type": {
+            "type": "string"
+          },
+          "message_id": {
+            "type": "string"
+          },
+          "payload": {
+            "type": "object"
+          },
+          "code": {
+            "type": "integer"
+          },
+          "in_response_to": {
+            "type": "string"
+          },
+          "serial": {
+            "type": "integer"
           }
         }
       }
