# internal/controller/message.go
@@ -11,3 +11,14 @@ type Message struct {
 	Payload   interface{}
 	Directive string
 }
+
+type ResponseMessage struct {
+	AccountNumber string      `json:"account"`
+	Sender        string      `json:"sender"`
+	MessageType   string      `json:"message_type"`
+	MessageID     string      `json:"message_id"`
+	Payload       interface{} `json:"payload"`
+	Code          int         `json:"code"`
+	InResponseTo  string      `json:"in_response_to"`
+	Serial        int         `json:"serial"`
+}
