# internal/controller/receptor.go
@@ -1,11 +1,24 @@
 package controller
 
 import (
+	"context"
+	"encoding/json"
+	"errors"
 	"log"
+	"sync"
+	"time"
+
+	"github.com/RedHatInsights/platform-receptor-controller/internal/platform/queue"
+	"github.com/RedHatInsights/platform-receptor-controller/internal/receptor/protocol"
 
 	"github.com/google/uuid"
+	kafka "github.com/segmentio/kafka-go"
+)
 
-	"github.com/RedHatInsights/platform-receptor-controller/internal/receptor/protocol"
+var (
+	connectionToReceptorNetworkLost = errors.New("Connection to receptor network lost")
+	requestCancelledBySender        = errors.New("Unable to complete the request.  Request cancelled by message sender.")
+	requestTimedOut                 = errors.New("Unable to complete the request.  Request timed out.")
 )
 
 type ReceptorService struct {
@@ -17,6 +30,9 @@ type ReceptorService struct {
 
 	Transport *Transport
 
+	responseDispatcherRegistrar *DispatcherTable
+
+	kafkaWriter *kafka.Writer
 	/*
 	   edges
 	   seen
@@ -26,8 +42,15 @@ type ReceptorService struct {
 func (r *ReceptorService) RegisterConnection(peerNodeID string, metadata interface{}) error {
 	log.Printf("Registering a connection to node %s", peerNodeID)
 
+	// FIXME: this is a bad hack!!!  fix this!!
+	r.kafkaWriter = queue.StartProducer(queue.GetProducer())
+
 	r.PeerNodeID = peerNodeID
 	r.Metadata = metadata
+
+	r.responseDispatcherRegistrar = &DispatcherTable{
+		dispatchTable: make(map[uuid.UUID]chan ResponseMessage),
+	}
 
 	return nil
 }
@@ -39,27 +62,159 @@ func (r *ReceptorService) UpdateRoutingTable(edges string, seen string) error {
 	return nil
 }
 
-func (r *ReceptorService) SendMessage(recipient string, route []string, payload interface{}, directive string) (*uuid.UUID, error) {
+func (r *ReceptorService) SendMessage(msgSenderCtx context.Context, recipient string, route []string, payload interface{}, directive string) (*uuid.UUID, error) {
 
-	jobID, err := uuid.NewRandom()
+	messageID, err := uuid.NewRandom()
 	if err != nil {
 		log.Println("Unable to generate UUID for routing the job...cannot proceed")
 		return nil, err
 	}
 
-	payloadMessage, messageID, err := protocol.BuildPayloadMessage(
-		jobID,
+	payloadMessage, err := protocol.BuildPayloadMessage(
+		messageID,
 		r.NodeID,
 		recipient,
 		route,
 		"directive",
 		directive,
 		payload)
-	log.Printf("Sending PayloadMessage - %s\n", *messageID)
+	log.Printf("Sending PayloadMessage - %s\n", messageID)
 
-	r.Transport.Send <- payloadMessage
+	err = r.sendMessage(msgSenderCtx, payloadMessage, time.Second*10) // FIXME:  add a configurable timeout
+	if err != nil {
+		return nil, err
+	}
 
-	return &jobID, nil
+	return &messageID, nil
+}
+
+func (r *ReceptorService) Ping(msgSenderCtx context.Context, recipient string, route []string) (interface{}, error) {
+
+	messageID, err := uuid.NewRandom()
+	if err != nil {
+		log.Println("Unable to generate UUID for routing the job...cannot proceed")
+		return nil, err
+	}
+
+	payloadMessage, err := protocol.BuildPayloadMessage(
+		messageID,
+		r.NodeID,
+		recipient,
+		route,
+		"directive",
+		"receptor:ping",
+		time.Now().UTC())
+
+	responseChannel := make(chan ResponseMessage)
+
+	log.Println("Registering a sync response handler")
+	r.responseDispatcherRegistrar.Register(messageID, responseChannel)
+	defer r.responseDispatcherRegistrar.Unregister(messageID)
+
+	err = r.sendControlMessage(msgSenderCtx, payloadMessage, time.Second*10) // FIXME:  add a configurable timeout
+	if err != nil {
+		return nil, err
+	}
+
+	responseMsg, err := r.waitForResponse(msgSenderCtx, responseChannel, time.Second*10) // FIXME:  add a configurable timeout
+	if err != nil {
+		return nil, err
+	}
+
+	return responseMsg, nil
+}
+
+// FIXME:  Does it make sense to move this logic to the transport object?  Or am I missing an abstraction?
+func (r *ReceptorService) sendControlMessage(msgSenderCtx context.Context, msgToSend protocol.Message, timeToWait time.Duration) error {
+
+	return sendMessage(r.Transport.Ctx, r.Transport.ControlChannel, msgSenderCtx, msgToSend, timeToWait)
+}
+
+func (r *ReceptorService) sendMessage(msgSenderCtx context.Context, msgToSend protocol.Message, timeToWait time.Duration) error {
+
+	return sendMessage(r.Transport.Ctx, r.Transport.Send, msgSenderCtx, msgToSend, timeToWait)
+}
+
+func sendMessage(transportCtx context.Context, sendChannel chan protocol.Message, msgSenderCtx context.Context, msgToSend protocol.Message, timeToWait time.Duration) error {
+	log.Println("Passing message to async layer")
+	select {
+	case sendChannel <- msgToSend:
+		return nil
+	case <-transportCtx.Done():
+		log.Printf("Connection to receptor network lost")
+		return connectionToReceptorNetworkLost
+	case <-msgSenderCtx.Done():
+		log.Printf("Message cancelled by sender")
+		return requestCancelledBySender
+	case <-time.After(timeToWait):
+		log.Printf("Timed out waiting to pass message to async layer")
+		return requestTimedOut
+	}
+}
+
+// FIXME:  Does it make sense to move this logic to the transport object?  Or am I missing an abstraction?
+func (r *ReceptorService) waitForResponse(msgSenderCtx context.Context, responseChannel chan ResponseMessage, timeToWait time.Duration) (ResponseMessage, error) {
+	log.Println("Waiting for a sync response")
+	nilResponseMessage := ResponseMessage{}
+
+	select {
+
+	case responseMsg := <-responseChannel:
+		return responseMsg, nil
+
+	case <-r.Transport.Ctx.Done():
+		log.Printf("Connection to receptor network lost")
+		return nilResponseMessage, connectionToReceptorNetworkLost
+
+	case <-msgSenderCtx.Done():
+		log.Printf("Message cancelled by sender")
+		return nilResponseMessage, requestCancelledBySender
+
+	case <-time.After(timeToWait): // FIXME:  add a configurable timeout
+		log.Printf("Timed out waiting for response for message")
+		return nilResponseMessage, requestTimedOut
+	}
+}
+
+func (r *ReceptorService) DispatchResponse(payloadMessage *protocol.PayloadMessage) {
+
+	responseMessage := ResponseMessage{
+		AccountNumber: r.AccountNumber,
+		Sender:        payloadMessage.RoutingInfo.Sender,
+		MessageID:     payloadMessage.Data.MessageID,
+		MessageType:   payloadMessage.Data.MessageType,
+		Payload:       payloadMessage.Data.RawPayload,
+		Code:          payloadMessage.Data.Code,
+		InResponseTo:  payloadMessage.Data.InResponseTo,
+		Serial:        payloadMessage.Data.Serial,
+	}
+
+	inResponseTo, _ := uuid.Parse(payloadMessage.Data.InResponseTo)
+
+	responseChannel, _ := r.responseDispatcherRegistrar.GetDispatchChannel(inResponseTo)
+
+	if responseChannel != nil {
+		responseChannel <- responseMessage
+		return
+	}
+
+	log.Printf("Dispatching response:%+v", responseMessage)
+
+	jsonResponseMessage, err := json.Marshal(responseMessage)
+	if err != nil {
+		log.Println("JSON marshal of ResponseMessage failed, err:", err)
+		return
+	}
+
+	// FIXME:  spawn a go routine here?  Make sure to honor the ctx
+	go func() {
+		r.kafkaWriter.WriteMessages(r.Transport.Ctx,
+			kafka.Message{
+				Key:   []byte(payloadMessage.Data.InResponseTo),
+				Value: jsonResponseMessage,
+			})
+	}()
+
 }
 
 func (r *ReceptorService) Close() {
@@ -88,4 +243,31 @@ func (r *ReceptorService) GetCapabilities() interface{} {
 	}
 
 	return capabilities
+}
+
+type DispatcherTable struct {
+	dispatchTable map[uuid.UUID]chan ResponseMessage
+	sync.Mutex
+}
+
+func (dt *DispatcherTable) Register(msgID uuid.UUID, responseChannel chan ResponseMessage) {
+	dt.Lock()
+	dt.dispatchTable[msgID] = responseChannel
+	dt.Unlock()
+}
+
+func (dt *DispatcherTable) Unregister(msgID uuid.UUID) {
+	dt.Lock()
+	delete(dt.dispatchTable, msgID)
+	dt.Unlock()
+}
+
+func (dt *DispatcherTable) GetDispatchChannel(msgID uuid.UUID) (chan ResponseMessage, error) {
+	var dispatchChannel chan ResponseMessage
+
+	dt.Lock()
+	dispatchChannel, _ = dt.dispatchTable[msgID]
+	dt.Unlock()
+
+	return dispatchChannel, nil
 }
